syntax = "proto3";

package o5.registry.github.v1.service;

import "google/api/annotations.proto";
import "o5/auth/v1/annotations.proto";
import "o5/registry/github/v1/repo.proto";

option go_package = "github.com/pentops/registry/internal/gen/o5/registry/github/v1/github_spb";

service GithubCommandService {
  option (o5.auth.v1.default_auth).none = {};

  rpc ConfigureRepo(ConfigureRepoRequest) returns (ConfigureRepoResponse) {
    option (google.api.http) = {
      post: "/registry/github/v1/c/repo/{owner}/{name}/configure",
      body: "*"
    };
  }
}

message ConfigureRepoRequest {
  string owner = 1;
  string name = 2;

  o5.registry.github.v1.RepoEventType.Configure config = 3;
}

message ConfigureRepoResponse {
  o5.registry.github.v1.RepoState repo = 1;
}
